# parking_transfer_area

./: .gitignore  README.md
code_ws/src/: CMakeLists.txt  configure.sh
code_ws/src/car_scanner/: CMakeLists.txt  package.xml
code_ws/src/car_scanner/conf/: lidars.yaml  transfer_area.yaml  transfer_area_hzzm.yaml  transfer_area_xzwb.yaml  wheel_classifier.xml  wheel_extractor.yaml
code_ws/src/car_scanner/launch/: car_state_publisher.launch  debug_car_extractor.launch
code_ws/src/car_scanner/msg/: CarInfo.msg  CarState.msg  ErrNo.msg  InfoOut.msg  Wheel.msg  WheelArray.msg  WheelCmd.msg
code_ws/src/car_scanner/src/: car_extractor.cpp  car_extractor_node.cpp  car_state_analysis.cpp  car_state_publisher.cpp  obstacle_extractor.cpp  obstacle_extractor_node.cpp  tf_publisher.cpp
code_ws/src/car_scanner/srv/: ScanPose.srv
code_ws/src/tools/self_start/: area_launch  area_launch.service  config_selfstart  readme.txt
code_ws/src/tools/transfer_sys_init/: config_transfer_sys_init  readme.txt  transfer_sys_init  transfer_sys_init.service
code_ws/src/transfer_area/: CMakeLists.txt  setup.py
code_ws/src/transfer_area/conf/: area_param.yaml  area_param_hzzm.yaml
code_ws/src/transfer_area/launch/: enter_area.launch  start_area.launch  start_area_hzzm.launch  start_area_xzwb.launch  test_stm32.launch
code_ws/src/transfer_area/msg/: CommandReply.msg  DockState.msg  Door.msg  DoorCmd.msg  DoorState.msg  LightCmd.msg  LightCurtainState.msg  MotorCmd.msg  MotorLock.msg  MotorPosition.msg  StateCmd.msg  UnderpanDetectionState.msg
code_ws/src/transfer_area/src/actuator/area_control/: CMakeLists.txt  area_control.cpp  area_control.h  package.xml
code_ws/src/transfer_area/srv/: getDoorState.srv  (+1 more)
(+49 files in other folders)
